# Finance_Misc

./: README.md
Baruch Pre-MFE/: Arrow_Debreu_optionsMarket.py
Baruch Pre-MFE/Arrow-Debreu/: Arrow_Debreu_generalTest.py  Arrow_Debreu_optionsMarket.py  NLA_HW4_MML.py
Baruch Pre-MFE/AvellandaAndLee2008/: US Stat Arb.ipynb  readme.md
Baruch Pre-MFE/Bond Numerical Methods/: Non_Linear_Solvers.py
Baruch Pre-MFE/MTH_9815_HW/MTH_9815_Quiz/: CMakeLists.txt  GeneralFunctions.cpp  GeneralFunctions.hpp  main.cpp
Baruch Pre-MFE/Options Pricing Framework/: ArrayException.hpp  Groups A & B.sln  Groups A & B.vcxproj.filters  PerpetualAmericanCall.hpp  PerpetualAmericanPut.hpp  UnexpectedInputException.hpp
Baruch Pre-MFE/Options Pricing Framework/Groups A & B/: Groups A & B.vcxproj  OptionBase.hpp  TestExactOptions.cpp
Challenges/: EvenOddUniformRatio.py
Challenges/Interview prep/: maxCostSortBinArr.py
Projects and HWProblems/Arrow-Debreu/: General_Functions.py
Projects and HWProblems/Bond Numerical Methods/: Bond.py  FinancialContract.py  GeneralFunctions.py
Projects and HWProblems/MTH_9815_HW/HW1/: AbstractLinkedList.hpp  CMakeLists.txt  Node.cpp  (+9 more)
Projects and HWProblems/MTH_9815_HW/HW2/Breman_HW2_Q2/: CMakeLists.txt  products.hpp  productserviceP2.hpp  productserviceP3.hpp  reader.cpp  soa.hpp  test_productsP2.cpp  test_productsP3.cpp  writer.cpp
Projects and HWProblems/Options Pricing Framework/: EuroCall.cpp  EuroCall.hpp  EuroPut.cpp  EuroPut.hpp  GlobalFunctions.hpp  MatrixOptionsPricingSpace.cpp  MatrixOptionsPricingSpace.hpp  OptionBase.cpp  PerpetrualAmericanCall.cpp  PerpetualAmericanPut.cpp  SizeMismatchException.hpp
Projects and HWProblems/tradingsystem/: BondAlgoExecutionService.hpp  BondAlgoStreamingService.hpp  BondExecutionService.hpp  BondHistoricalDataService.hpp  BondInquiryService.hpp  BondMarketDataService.hpp  BondMarketDataShmConnectors.hpp  BondPositionService.hpp  BondPriceUtils.hpp  BondPricingService.hpp  BondProductRepository.hpp  BondRiskService.hpp  BondSocketConnectors.hpp  BondSocketParsers.hpp  BondStreamingService.hpp  BondTradeBookingService.hpp  BondTypedConnectors.hpp  BondUniverse.hpp  CMakeLists.txt  CsvUtils.hpp  DataGenerators.cpp  ExecutionPrintProcess.cpp  ExternalFileToSocketPublishers.hpp  GUIService.hpp  HisotricalFileConnectors.hpp  HistoricalWriters.hpp  InquiryQuoteLoopbackConnector.hpp  MarketDataFileToShmPublisher.hpp  MarketDataShmPublisherMain.cpp  ShmStringRingBuffer.hpp  StreamingPrintProcess.cpp  TcpLineSocket.hpp  executionservice.hpp  historicaldataservice.hpp  inquiries_publisher_main.cpp  main.cpp  md_shm_publisher.cpp  positionservice.hpp  prices_publisher_main.cpp  products.hpp  (+6 more)
(+1 files in other folders)
